# sessiongate

./: .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  Cargo.toml  FULLSCREEN-TEST-REPORT-2026-07-18.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-STATUS.md  PRODUCTION-DECISIONS.md  PRODUCTION-PRIORITY-PLAN.md  README.md  ROADMAP.md  SECURITY.md  TEST-REPORT-2026-07-18.md  TEST-REPORT-POST-FIX-2026-07-18.md  USABLE-FEATURE-REPORT-2026-07-18.md  WEB-RDP-IMPLEMENTATION-PLAN.md  WINDOWS-CLIENT.md  compose.yaml
docs/: CONTAINER-DEPLOYMENT.md  MANAGEMENT-API.md  SIEM-INTEGRATION.md  TEST-RESULTS.md  TESTING.md
migrations/: 0001_rdp.sql  0002_identity_sessions.sql  0003_management_control_plane.sql
portal/: Cargo.toml  Dockerfile
portal/src/: auth.rs  lib.rs  main.rs  management.rs
portal/web/: admin.html  admin.js  app.css  app.js  index.html  login.html  login.js  rdp.css  rdp.html  rdp.js
scripts/: Reset-HyperVIntegrationVm.ps1  Start-HyperVIntegrationLab.ps1  Test-HyperVBrowserRdp.ps1
