[package]
name = "vpn-rdp-portal"
description = "SessionGate zero-trust browser remote desktop gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
